exip-0.4.1/include/procTypes.h

#define FALSE 0
#define STRICT          0x02 
#define SCHEMA_ID_ABSENT 0
struct fractionalSecs
{
	unsigned char offset;
	unsigned int value;
};
typedef struct fractionalSecs FractionalSecs;
struct EXIPDateTime
{
	struct tm dateTime;
	FractionalSecs fSecs;
	uint16_t presenceMask;
};
typedef struct EXIPDateTime EXIPDateTime;
typedef EXIP_INTEGER Integer;
struct EXIFloat
{
	int64_t mantissa;
	int16_t exponent;
};
typedef EXIP_FLOAT Float;
typedef EXIP_DECIMAL Decimal;
typedef EXIP_INDEX Index;
typedef EXIP_SMALL_INDEX SmallIndex;
typedef CHAR_TYPE CharType;
struct StringType
{
	CharType* str;
	Index length;
};
typedef struct StringType String;
struct QName {
	const String* uri;
	const String* localName;
	const String* prefix;
};
typedef struct QName QName;
struct QNameID {
	SmallIndex uriId;	
	Index lnId;	
};
typedef struct QNameID QNameID;
struct allocBlock {
	void* allocation[ALLOCATION_ARRAY_SIZE];
	struct allocBlock* nextBlock;
};
struct allocList {
	struct allocBlock* firstBlock;
	struct allocBlock* lastBlock;
	SmallIndex currAllocSlot;
};
typedef struct allocList AllocList;
struct dynArray {
	size_t entrySize;
	uint16_t chunkEntries;
	uint16_t arrayEntries; 
};
typedef struct dynArray DynArray;
enum EventType
{
	EVENT_SD       =0,
	EVENT_ED       =1,
	EVENT_SE_QNAME =5,
	EVENT_SE_URI   =6,
	EVENT_SE_ALL   =7,
	EVENT_EE       =8,
	EVENT_AT_QNAME =2,
	EVENT_AT_URI   =3,
	EVENT_AT_ALL   =4,
	EVENT_CH       =9,
	EVENT_NS      =10,
	EVENT_CM      =11,
	EVENT_PI      =12,
	EVENT_DT      =13,
	EVENT_ER      =14,
	EVENT_SC      =15,
	EVENT_VOID    =16
};
typedef uint8_t EventType;
typedef enum EventType EventType;
enum EXIType
{
	VALUE_TYPE_NONE              =1,
	VALUE_TYPE_STRING            =2,
	VALUE_TYPE_FLOAT             =3,
	VALUE_TYPE_DECIMAL           =4,
	VALUE_TYPE_DATE_TIME         =5,
	VALUE_TYPE_BOOLEAN           =6,
	VALUE_TYPE_BINARY            =7,
	VALUE_TYPE_LIST              =8,
	VALUE_TYPE_QNAME             =9,
	VALUE_TYPE_UNTYPED          =10,
	VALUE_TYPE_INTEGER          =20,
	VALUE_TYPE_SMALL_INTEGER    =21,
	VALUE_TYPE_NON_NEGATIVE_INT =22
};
typedef uint8_t EXIType;
typedef enum EXIType EXIType;
struct Production
{
	EventType eventType;
	Index typeId;
	QNameID qnameId;
	SmallIndex nonTermID;
};
typedef struct Production Production;
struct GrammarRulePart
{
     Production* prod;
     Index count;
     unsigned char bits;
};
typedef struct GrammarRulePart GrammarRulePart;
struct GrammarRule
{
     GrammarRulePart part[3];
};
typedef struct GrammarRule GrammarRule;
struct EXIGrammar
{
	GrammarRule* rule;
	SmallIndex count;
	unsigned char props;
	SmallIndex contentIndex;
};
typedef struct EXIGrammar EXIGrammar;
struct GrammarStackNode
{
	EXIGrammar* grammar;
	SmallIndex lastNonTermID; 
	struct GrammarStackNode* nextInStack;
};
typedef struct GrammarStackNode EXIGrammarStack;
struct VxEntry {
	Index globalId;
};
typedef struct VxEntry VxEntry;
struct ValueEntry {
	struct
	{
		QNameID forQNameId;
		Index vxEntryId;
	} locValuePartition; 
	String valueStr;
};
typedef struct ValueEntry ValueEntry;
struct ValueTable {
#if DYN_ARRAY_USE == ON
	DynArray dynArray;
#endif
	ValueEntry* value;
	Index count;
#if HASH_TABLE_USE == ON
	struct hashtable* hashTbl;
#endif
	Index globalId;
};
typedef struct ValueTable ValueTable;
struct VxTable {
#if DYN_ARRAY_USE == ON
	DynArray dynArray;
#endif
	VxEntry* vx;
	Index count;
};
typedef struct VxTable VxTable;
struct PfxTable {
	SmallIndex count;
	String pfxStr[MAXIMUM_NUMBER_OF_PREFIXES_PER_URI];
};
typedef struct PfxTable PfxTable;
struct LnEntry {
	VxTable vxTable;
	String lnStr;
	Index elemGrammar;
	Index typeGrammar;
};
typedef struct LnEntry LnEntry;
struct LnTable {
#if DYN_ARRAY_USE == ON
	DynArray dynArray;
#endif
	LnEntry* ln;
	Index count;
};
typedef struct LnTable LnTable;
struct UriEntry {
	LnTable lnTable;
	PfxTable* pfxTable;
	String uriStr;
};
typedef struct UriEntry UriEntry;
struct UriTable {
#if DYN_ARRAY_USE == ON
	DynArray dynArray;
#endif
	UriEntry* uri;
	SmallIndex count;
};
typedef struct UriTable UriTable;
struct SimpleType {
	EXIType exiType;
	uint16_t facetPresenceMask;
	int64_t max;
	int64_t min;
	uint32_t length;
};
typedef struct SimpleType SimpleType;
struct SimpleTypeTable {
#if DYN_ARRAY_USE == ON
	DynArray dynArray;
#endif
	SimpleType* sType;
	Index count;
};
typedef struct SimpleTypeTable SimpleTypeTable;
struct SchemaGrammarTable {
#if DYN_ARRAY_USE == ON
	DynArray dynArray;
#endif
	EXIGrammar* grammar;
	Index count;
};
typedef struct SchemaGrammarTable SchemaGrammarTable;
struct enumDefinition
{
	Index typeId;
	void *values;
	SmallIndex count;
};
typedef struct enumDefinition EnumDefinition;
struct EnumTable {
#if DYN_ARRAY_USE == ON
	DynArray dynArray;
#endif
	EnumDefinition* enumDef;
	Index count;
};
typedef struct EnumTable EnumTable;
struct EXIPSchema
{
	AllocList memList;
	UriTable uriTable;
	EXIGrammar docGrammar;
	SimpleTypeTable	simpleTypeTable;
	SchemaGrammarTable grammarTable;
	Index staticGrCount;
	EnumTable enumTable;
};
typedef struct EXIPSchema EXIPSchema;
struct StreamContext
{
	Index bufferIndx;
	unsigned char bitPointer;
	SmallIndex currNonTermID;
	QNameID currElem;
	QNameID currAttr;
	unsigned int expectATData;
	Index attrTypeId;
};
typedef struct StreamContext StreamContext;
struct ioStream
{
	size_t (*readWriteToStream)(void* buf, size_t size, void* stream);
	void* stream;
};
typedef struct ioStream IOStream;
struct DatatypeRepresentationMap
{
	void* TODO; 
};
typedef struct DatatypeRepresentationMap DatatypeRepresentationMap;
struct EXIOptions
{
	unsigned char enumOpt;
	unsigned char preserve;
	String schemaID;
	DatatypeRepresentationMap* drMap;
	uint32_t blockSize;
	Index valueMaxLength;
	Index valuePartitionCapacity;
	void* user_defined_data;
};
typedef struct EXIOptions EXIOptions;
struct EXIheader
{
	unsigned char has_cookie;
	unsigned char has_options;
	unsigned char is_preview_version;
	int16_t version_number;
	EXIOptions opts;
};
typedef struct EXIheader EXIheader;
struct BinaryBuffer
{
	char* buf;
	Index bufLen;
	Index bufContent;
	IOStream ioStrm;
};
typedef struct BinaryBuffer BinaryBuffer;
struct EXIStream
{
	BinaryBuffer buffer;
	EXIheader header;
	StreamContext context;
	ValueTable valueTable;
	EXIGrammarStack* gStack;
	AllocList memList;
	EXIPSchema* schema;
};
typedef struct EXIStream EXIStream;