exip-0.4.1/include/EXISerializer.h


struct EXISerializer
{
	errorCode (*startDocument)(EXIStream* strm);
	errorCode (*endDocument)(EXIStream* strm);
	errorCode (*startElement)(EXIStream* strm, QName qname);
	errorCode (*endElement)(EXIStream* strm);
	errorCode (*attribute)(EXIStream* strm, QName qname, EXIType valueType);
	errorCode (*intData)(EXIStream* strm, Integer int_val);
	errorCode (*booleanData)(EXIStream* strm, unsigned char bool_val);
	errorCode (*stringData)(EXIStream* strm, const String str_val);
	errorCode (*floatData)(EXIStream* strm, Float float_val);
	errorCode (*binaryData)(EXIStream* strm, const char* binary_val, Index nbytes);
	errorCode (*dateTimeData)(EXIStream* strm, EXIPDateTime dt_val);
	errorCode (*decimalData)(EXIStream* strm, Decimal dec_val);
	errorCode (*listData)(EXIStream* strm, unsigned int itemCount);
	errorCode (*processingInstruction)(EXIStream* strm); 
	errorCode (*namespaceDeclaration)(EXIStream* strm, const String ns, const String prefix, unsigned char isLocalElementNS);
	errorCode (*exiHeader)(EXIStream* strm);
	errorCode (*selfContained)(EXIStream* strm);  
	void (*initHeader)(EXIStream* strm);
	errorCode (*initStream)(EXIStream* strm, BinaryBuffer buffer, EXIPSchema* schema, unsigned char schemaIdMode, String* schemaID);
	errorCode (*closeEXIStream)(EXIStream* strm);
};
typedef struct EXISerializer EXISerializer;
errorCode startDocument(EXIStream* strm);
errorCode endDocument(EXIStream* strm);
errorCode startElement(EXIStream* strm, QName qname);
errorCode endElement(EXIStream* strm);
errorCode attribute(EXIStream* strm, QName qname, EXIType exiType);
errorCode intData(EXIStream* strm, Integer int_val);
errorCode booleanData(EXIStream* strm, unsigned char bool_val);
errorCode stringData(EXIStream* strm, const String str_val);
errorCode floatData(EXIStream* strm, Float float_val);
errorCode binaryData(EXIStream* strm, const char* binary_val, Index nbytes);
errorCode dateTimeData(EXIStream* strm, EXIPDateTime dt_val);
errorCode decimalData(EXIStream* strm, Decimal dec_val);
errorCode listData(EXIStream* strm, unsigned int itemCount);
errorCode processingInstruction(EXIStream* strm); 
errorCode namespaceDeclaration(EXIStream* strm, const String ns, const String prefix, unsigned char isLocalElementNS);
errorCode selfContained(EXIStream* strm);  
void initHeader(EXIStream* strm);
errorCode initStream(EXIStream* strm, BinaryBuffer buffer, EXIPSchema *schema,
					unsigned char schemaIdMode, String* schemaID);
errorCode closeEXIStream(EXIStream* strm);
errorCode serializeEvent(EXIStream* strm, unsigned char codeLength, Index lastCodePart, QName* qname);