exip-0.4.1/include/EXIParser.h


struct Parser
{
	EXIStream strm;
	ContentHandler handler;
	void* app_data;
};
typedef struct Parser Parser;
errorCode initParser(Parser* parser, BinaryBuffer buffer, EXIPSchema* schema, void* app_data);
errorCode parseHeader(Parser* parser);
errorCode parseNext(Parser* parser);
void destroyParser(Parser* parser);